[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prueba00/Escenas/office.gd" type="Script" id=1]
[ext_resource path="res://Prueba00/Images/Office.png" type="Texture" id=2]
[ext_resource path="res://Prueba00/Escenas/DevelopGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prueba00/Escenas/DevelopIu.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="TextureRect"]
pause_mode = 2
wait_time = 5.0
autostart = true

[node name="Exitbutton1" type="Button" parent="TextureRect"]
margin_left = 40.0
margin_top = 630.0
margin_right = 315.0
margin_bottom = 795.0
rect_scale = Vector2( 0.4, 0.4 )
flat = true

[node name="Configbutton" type="Button" parent="TextureRect"]
margin_left = 943.0
margin_top = 494.0
margin_right = 1278.0
margin_bottom = 637.0
rect_scale = Vector2( 0.4, 0.4 )
flat = true

[node name="Hardbutton" type="Button" parent="TextureRect"]
margin_left = 876.0
margin_top = 411.0
margin_right = 1387.0
margin_bottom = 549.0
rect_scale = Vector2( 0.4, 0.4 )
flat = true

[node name="Upbutton" type="Button" parent="TextureRect"]
margin_left = 927.0
margin_top = 326.0
margin_right = 1310.0
margin_bottom = 464.0
rect_scale = Vector2( 0.4, 0.4 )
flat = true

[node name="ProgressBar" type="ProgressBar" parent="TextureRect"]
margin_left = 150.0
margin_top = 5.0
margin_right = 310.0
margin_bottom = 46.0
rounded = true

[node name="progressLabel" type="Label" parent="TextureRect"]
margin_left = 9.74997
margin_top = 10.75
margin_right = 75.7501
margin_bottom = 24.75
rect_scale = Vector2( 2, 2 )
text = "Desarrollo"

[node name="cashLabel" type="Label" parent="TextureRect"]
margin_left = 327.0
margin_top = 10.75
margin_right = 393.0
margin_bottom = 24.75
rect_scale = Vector2( 2, 2 )
text = "Dinero:"

[node name="dayLabel" type="Label" parent="TextureRect"]
margin_left = 930.0
margin_top = 10.5
margin_right = 970.0
margin_bottom = 24.5
rect_scale = Vector2( 2, 2 )
text = "Day:"

[node name="valueDay" type="Label" parent="TextureRect"]
margin_left = 999.5
margin_top = 11.25
margin_right = 1017.5
margin_bottom = 25.25
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="valueCash" type="Label" parent="TextureRect"]
margin_left = 423.501
margin_top = 12.25
margin_right = 441.501
margin_bottom = 26.25
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="Develbutton" type="Button" parent="."]
margin_left = 414.0
margin_top = 180.0
margin_right = 488.0
margin_bottom = 234.0
rect_scale = Vector2( 4, 5 )
text = " "
flat = true
align = 0

[node name="DevelopGame" parent="." instance=ExtResource( 3 )]
visible = false

[node name="DevelopIu" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="timeout" from="TextureRect/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureRect/Exitbutton1" to="." method="_on_Exitbutton_pressed"]
[connection signal="pressed" from="Develbutton" to="." method="_on_Develbutton_pressed"]
